--- a/accueil.html
+++ b/accueil.html
@@ -76,6 +76,7 @@
                     <a href="./lapalettedugout.html">
                         <figure>
                             <img src="./assets/restaurants/lapalettedugout.jpg" alt="La palette du goût">
+                            <div class="new">Nouveau</div>
                             <figcaption>
                                 <h4>
                                     La palette du goût
@@ -94,6 +95,7 @@
                     <a href="./lanoteenchantee.html">
                         <figure>
                             <img src="./assets/restaurants/lanoteenchantee.jpg" alt="La note enchantée">
+                            <div class="new">Nouveau</div>
                             <figcaption>
                                 <h4>
                                     La note enchantée
@@ -152,7 +154,7 @@
         <ul>
             <li>
                 <a href="#">
-                    <i class="fas fa-list-ul"></i> Proposez un restaurant
+                    <i class="fas fa-utensils"></i> Proposez un restaurant
                 </a>
             </li>
             <li>
@@ -166,7 +168,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="mailto:contact@ohmyfood.com">
                     Contact
                 </a>
             </li>
