--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -39,29 +39,38 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Tartare de poulpe acidulé</h5>
-                                <p>Aux zestes d'orange</p>
+                                <div class="meal__info__text">
+                                    <h5>Tartare de poulpe acidulé</h5>
+                                    <p>Aux zestes d'orange</p>
+                                </div>
+                                <p class="meal__price">25€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>25€</p>
-                            </div>
-                        </div>
-                        <div class="meal">
-                            <div class="meal__info">
-                                <h5>Velouté de légumes d'antan</h5>
-                                <p>Carotte, panais, topinambour</p>
-                            </div>
-                            <div class="meal__price">
-                                <p>35€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Soupe à l'oignon</h5>
-                                <p>Revisitée</p>
+                                <div class="meal__info__text">
+                                    <h5>Velouté de légumes d'antan</h5>
+                                    <p>Carotte, panais, topinambour</p>
+                                </div>
+                                <p class="meal__price">35€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>20€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <div class="meal__info__text">
+                                    <h5>Soupe à l'oignon</h5>
+                                    <p>Revisitée</p>
+                                </div>
+                                <p class="meal__price">20€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                     </div>
@@ -71,29 +80,38 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Coquilles Saint-Jacques</h5>
-                                <p>Accompagnées d'une purée de panais</p>
+                                <div class="meal__info__text">
+                                    <h5>Coquilles Saint-Jacques</h5>
+                                    <p>Accompagnées d'une purée de panais</p>
+                                </div>
+                                <p class="meal__price">40€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>40€</p>
-                            </div>
-                        </div>
-                        <div class="meal">
-                            <div class="meal__info">
-                                <h5>Magret de canard</h5>
-                                <p>Et parmentier de pommes de terre</p>
-                            </div>
-                            <div class="meal__price">
-                                <p>35€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Pigeonneau d’Ille-et-Vilaine</h5>
-                                <p>Sur son lit de gnocchis aux légumes</p>
+                                <div class="meal__info__text">
+                                    <h5>Magret de canard</h5>
+                                    <p>Et parmentier de pommes de terre</p>
+                                </div>
+                                <p class="meal__price">35€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>44€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <div class="meal__info__text">
+                                    <h5>Pigeonneau d’Ille-et-Vilaine</h5>
+                                    <p>Sur son lit de gnocchis aux légumes</p>
+                                </div>
+                                <p class="meal__price">44€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                     </div>
@@ -103,41 +121,46 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Pétales de violettes glacés</h5>
-                                <p>Et purée de noisettes</p>
+                                <div class="meal__info__text">
+                                    <h5>Pétales de violettes glacés</h5>
+                                    <p>Et purée de noisettes</p>
+                                </div>
+                                <p class="meal__price">18€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>18€</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card__menu__item">
-                        <div class="meal">
-                            <div class="meal__info">
-                                <h5>Fondant au chocolat</h5>
-                                <p>Revisité</p>
-                            </div>
-                            <div class="meal__price">
-                                <p>22€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                    </div>
-                    <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Millefeuille croustillant</h5>
-                                <p>Myrtilles et pâte d’amande</p>
+                                <div class="meal__info__text">
+                                    <h5>Fondant au chocolat</h5>
+                                    <p>Revisité</p>
+                                </div>
+                                <p class="meal__price">22€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>23€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
+                        </div>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <div class="meal__info__text">
+                                    <h5>Millefeuille croustillant</h5>
+                                    <p>Myrtilles et pâte d’amande</p>
+                                </div>
+                            <p class="meal__price">23€</p>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="order-button">
-                <button type="submit">Commander</button>
-            </div>
+        </div>
+        <div class="order-button">
+            <button type="submit">Commander</button>
+        </div>
         </div>
     </main>
     <footer>
@@ -145,7 +168,7 @@
         <ul>
             <li>
                 <a href="#">
-                    <i class="fas fa-list-ul"></i> Proposez un restaurant
+                    <i class="fas fa-utensils"></i> Proposez un restaurant
                 </a>
             </li>
             <li>
