--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -40,38 +40,50 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Ravioles de foie gras</h5>
-                                <p>Accompagnés de leur crème à la truffe</p>
+                                <div class="meal__info__text">
+                                    <h5>Ravioles de foie gras</h5>
+                                    <p>Accompagnés de leur crème à la truffe</p>
+                                </div>
+                                <p class="meal__price">25€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>25€</p>
-                            </div>
-                        </div>
-                        <div class="meal">
-                            <div class="meal__info">
-                                <h5>Caviar osciètre</h5>
-                                <p>Sur blini à la farine de blé noir</p>
-                            </div>
-                            <div class="meal__price">
-                                <p>35€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Homard et espuma de potiron</h5>
-                                <p>Mariné aux zestes d'orange</p>
+                                <div class="meal__info__text">
+                                    <h5>Caviar osciètre</h5>
+                                    <p>Sur blini à la farine de blé noir</p>
+                                </div>
+                                <p class="meal__price">35€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>20€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Foie gras de canard cuit entier</h5>
-                                <p>Confiture de figue et pain toasté</p>
+                                <div class="meal__info__text">
+                                    <h5>Homard et espuma de potiron</h5>
+                                    <p>Mariné aux zestes d'orange</p>
+                                </div>
+                                <p class="meal__price">20€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>35€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <div class="meal__info__text">
+                                    <h5>Foie gras de canard cuit entier</h5>
+                                    <p>Confiture de figue et pain toasté</p>
+                                </div>
+                                <p class="meal__price">35€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                     </div>
@@ -81,29 +93,38 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Noix de coquilles Saint-Jacques</h5>
-                                <p>Sur lit de purée de céleri-rave</p>
+                                <div class="meal__info__text">
+                                    <h5>Noix de coquilles Saint-Jacques</h5>
+                                    <p>Sur lit de purée de céleri-rave</p>
+                                </div>
+                                <p class="meal__price">40€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>40€</p>
-                            </div>
-                        </div>
-                        <div class="meal">
-                            <div class="meal__info">
-                                <h5>Langoustine poêlée</h5>
-                                <p>Purée de patate douce</p>
-                            </div>
-                            <div class="meal__price">
-                                <p>35€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Mijoté de queue de boeuf </h5>
-                                <p>Et riz sauvage aux zestes de citron</p>
+                                <div class="meal__info__text">
+                                    <h5>Langoustine poêlée</h5>
+                                    <p>Purée de patate douce</p>
+                                </div>
+                                <p class="meal__price">35€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>44€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <div class="meal__info__text">
+                                    <h5>Mijoté de queue de boeuf </h5>
+                                    <p>Et riz sauvage aux zestes de citron</p>
+                                </div>
+                                <p class="meal__price">44€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                     </div>
@@ -113,33 +134,38 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Macaron noisette et chocolat</h5>
-                                <p>Glace au caramel brun et sel de Guérande</p>
+                                <div class="meal__info__text">
+                                    <h5>Macaron noisette et chocolat</h5>
+                                    <p>Glace au caramel brun et sel de Guérande</p>
+                                </div>
+                                <p class="meal__price">18€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>18€</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card__menu__item">
-                        <div class="meal">
-                            <div class="meal__info">
-                                <h5>Baba au rhum revisité </h5>
-                                <p>Avec son coulis de citron</p>
-                            </div>
-                            <div class="meal__price">
-                                <p>22€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                    </div>
-                    <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Tarte au citron meringuée </h5>
-                                <p>Déstructurée</p>
+                                <div class="meal__info__text">
+                                    <h5>Baba au rhum revisité </h5>
+                                    <p>Avec son coulis de citron</p>
+                                </div>
+                                <p class="meal__price">22€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>23€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <div class="meal__info__text">
+                                    <h5>Tarte au citron meringuée </h5>
+                                    <p>Déstructurée</p>
+                                </div>
+                                <p class="meal__price">23€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                     </div>
@@ -151,11 +177,11 @@
         </div>
     </main>
     <footer>
-        <h3>ohmyfood</h3>
+        <p>ohmyfood</p>
         <ul>
             <li>
                 <a href="#">
-                    <i class="fas fa-list-ul"></i> Proposez un restaurant
+                    <i class="fas fa-utensils"></i> Proposez un restaurant
                 </a>
             </li>
             <li>
