--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -40,29 +40,38 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Fricassée d'escargot</h5>
-                                <p>Au piment d'espelette</p>
+                                <div class="meal__info__text">
+                                    <h5>Fricassée d'escargot</h5>
+                                    <p>Au piment d'espelette</p>
+                                </div>
+                                <p class="meal__price">25€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>25€</p>
-                            </div>
-                        </div>
-                        <div class="meal">
-                            <div class="meal__info">
-                                <h5>Foie gras de canard mi-cuit</h5>
-                                <p>Et ses copeaux de truffe noire</p>
-                            </div>
-                            <div class="meal__price">
-                                <p>35€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Oeuf au plat</h5>
-                                <p>Assaisonné à la truffe sur lit de caviar</p>
+                                <div class="meal__info__text">
+                                    <h5>Foie gras de canard mi-cuit</h5>
+                                    <p>Et ses copeaux de truffe noire</p>
+                                </div>
+                                <p class="meal__price">35€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>20€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <div class="meal__info__text">
+                                    <h5>Oeuf au plat</h5>
+                                    <p>Assaisonné à la truffe sur lit de caviar</p>
+                                </div>
+                                <p class="meal__price">20€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                     </div>
@@ -72,31 +81,42 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Filet de boeuf aux herbes</h5>
-                                <p>Accompagné de sa ribambelle de légumes</p>
+                                <div class="meal__info__text">
+                                    <h5>Filet de boeuf aux herbes</h5>
+                                    <p>Accompagné de sa ribambelle de légumes</p>
+                                </div>
+                                <p class="meal__price">40€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>40€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+
+                        <div class="meal">
+                            <div class="meal__info">
+                                <div class="meal__info__text">
+                                    <h5>Parmentier de queue de boeuf</h5>
+                                    <p>À la truffe noire sur sa purée de panais</p>
+                                </div>
+                                <p class="meal__price">35€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Parmentier de queue de boeuf</h5>
-                                <p>À la truffe noire sur sa purée de panais</p>
+                                <div class="meal__info__text">
+                                    <h5>Filet de Turbot</h5>
+                                    <p>Aux agrumes</p>
+                                </div>
+                                <p class="meal__price">44€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>35€</p>
-                            </div>
-                        </div>
-                        <div class="meal">
-                            <div class="meal__info">
-                                <h5>Filet de Turbot</h5>
-                                <p>Aux agrumes</p>
-                            </div>
-                            <div class="meal__price">
-                                <p>44€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
+
                     </div>
                 </div>
                 <div class="card__menu">
@@ -104,33 +124,39 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Paris-Brest</h5>
-                                <p>Revisité</p>
+                                <div class="meal__info__text">
+                                    <h5>Paris-Brest</h5>
+                                    <p>Revisité</p>
+                                </div>
+                                <p class="meal__price">18€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>18€</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card__menu__item">
-                        <div class="meal">
-                            <div class="meal__info">
-                                <h5>Macaron au chocolat d'exception</h5>
-                                <p>Et glace à la vanille de Madagascar</p>
-                            </div>
-                            <div class="meal__price">
-                                <p>22€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                    </div>
-                    <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Mousse au chocolat</h5>
-                                <p>Au piment d'espelette et à la truffe noire</p>
+                                <div class="meal__info__text">
+                                    <h5>Macaron au chocolat d'exception</h5>
+                                    <p>Et glace à la vanille de Madagascar</p>
+                                </div>
+                                <p class="meal__price">22€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>23€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+
+                        <div class="meal">
+                            <div class="meal__info">
+                                <div class="meal__info__text">
+                                    <h5>Mousse au chocolat</h5>
+                                    <p>Au piment d'espelette et à la truffe noire</p>
+                                </div>
+                                <p class="meal__price">23€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                     </div>
@@ -142,11 +168,11 @@
         </div>
     </main>
     <footer>
-        <h3>ohmyfood</h3>
+        <p>ohmyfood</p>
         <ul>
             <li>
                 <a href="#">
-                    <i class="fas fa-list-ul"></i> Proposez un restaurant
+                    <i class="fas fa-utensils"></i> Proposez un restaurant
                 </a>
             </li>
             <li>
