--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -40,29 +40,38 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Tartare de thon</h5>
-                                <p>Assaisonné au yuzu</p>
+                                <div class="meal__info__text">
+                                    <h5>Tartare de thon</h5>
+                                    <p>Assaisonné au yuzu</p>
+                                </div>
+                                <p class="meal__price">25€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>25€</p>
-                            </div>
-                        </div>
-                        <div class="meal">
-                            <div class="meal__info">
-                                <h5>Bouchée de homard croustillant</h5>
-                                <p>Et sa farandole de petits légumes</p>
-                            </div>
-                            <div class="meal__price">
-                                <p>35€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Velouté de cèpes</h5>
-                                <p>Aux truffes</p>
+                                <div class="meal__info__text">
+                                    <h5>Bouchée de homard croustillant</h5>
+                                    <p>Et sa farandole de petits légumes</p>
+                                </div>
+                                <p class="meal__price">35€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>20€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <div class="meal__info__text">
+                                    <h5>Velouté de cèpes</h5>
+                                    <p>Aux truffes</p>
+                                </div>
+                                <p class="meal__price">20€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                     </div>
@@ -72,29 +81,41 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Poulet rôti aux herbes de Provence</h5>
-                                <p>Et sa crème de truffe</p>
+                                <div class="meal__info__text">
+                                    <h5>Poulet rôti aux herbes de Provence</h5>
+                                    <p>Et sa crème de truffe</p>
+                                </div>
+                                <p class="meal__price">40€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>40€</p>
-                            </div>
-                        </div>
-                        <div class="meal">
-                            <div class="meal__info">
-                                <h5>Langouste rôtie</h5>
-                                <p>Et ses légumes de saison</p>
-                            </div>
-                            <div class="meal__price">
-                                <p>35€</p>
+
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Côte de boeuf Angus</h5>
-                                <p>Et sa purée de panais</p>
+                                <div class="meal__info__text">
+                                    <h5>Langouste rôtie</h5>
+                                    <p>Et ses légumes de saison</p>
+                                </div>
+                                <p class="meal__price">35€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>44€</p>
+
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                        <div class="meal">
+                            <div class="meal__info">
+                                <div class="meal__info__text">
+                                    <h5>Côte de boeuf Angus</h5>
+                                    <p>Et sa purée de panais</p>
+                                </div>
+                                <p class="meal__price">44€</p>
+                            </div>
+
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                     </div>
@@ -104,50 +125,56 @@
                     <div class="card__menu__item">
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Farandole de desserts</h5>
-                                <p>Du chef</p>
+                                <div class="meal__info__text">
+                                    <h5>Farandole de desserts</h5>
+                                    <p>Du chef</p>
+                                </div>
+                                <p class="meal__price">18€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>18€</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card__menu__item">
-                        <div class="meal">
-                            <div class="meal__info">
-                                <h5>Crème brulée</h5>
-                                <p>Revisitée</p>
-                            </div>
-                            <div class="meal__price">
-                                <p>22€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                    </div>
-                    <div class="card__menu__item">
+
                         <div class="meal">
                             <div class="meal__info">
-                                <h5>Tiramisu</h5>
-                                <p>À la noisette</p>
+                                <div class="meal__info__text">
+                                    <h5>Crème brulée</h5>
+                                    <p>Revisitée</p>
+                                </div>
+                                <p class="meal__price">22€</p>
                             </div>
-                            <div class="meal__price">
-                                <p>23€</p>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+
+                        <div class="meal">
+                            <div class="meal__info">
+                                <div class="meal__info__text">
+                                    <h5>Tiramisu</h5>
+                                    <p>À la noisette</p>
+                                </div>
+                                <p class="meal__price">23€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
             <div class="order-button">
                 <button type="submit">Commander</button>
             </div>
         </div>
     </main>
     <footer>
-        <h3>ohmyfood</h3>
+        <p>ohmyfood</p>
         <ul>
             <li>
                 <a href="#">
-                    <i class="fas fa-list-ul"></i> Proposez un restaurant
+                    <i class="fas fa-utensils"></i> Proposez un restaurant
                 </a>
             </li>
             <li>
